--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -629,20 +629,6 @@
   mrclass: '30F60 (30C62 30F35 32G15)'
   volume: '30'
 
-- number: '2'
-  author: 'Gupta, Subhojoy'
-  fjournal: 'Journal of Topology and Analysis'
-  url: 'https://doi.org/10.1142/S1793525320500156'
-  pages: '349-393'
-  year: '2021'
-  title: 'Harmonic maps and wild Teichm&uuml;ller spaces'
-  doi: '10.1142/S1793525320500156'
-  issn: '1793-5253'
-  journal: 'J. Topol. Anal.'
-  mrnumber: '4284613'
-  mrclass: '30F30 (30F60)'
-  volume: '13'
-
 - mrnumber: '1795202'
   pages: '605-615'
   year: '2000'
@@ -962,6 +948,34 @@
   mrnumber: '3778389'
   mrclass: '32H50 (32H02)'
   volume: '128'
+
+- number: '2'
+  author: 'Gupta, Subhojoy'
+  fjournal: 'Journal of Topology and Analysis'
+  url: 'https://doi.org/10.1142/S1793525320500156'
+  pages: '349-393'
+  year: '2021'
+  title: 'Harmonic maps and wild Teichm&uuml;ller spaces'
+  doi: '10.1142/S1793525320500156'
+  issn: '1793-5253'
+  journal: 'J. Topol. Anal.'
+  mrnumber: '4284613'
+  mrclass: '30F30 (30F60)'
+  volume: '13'
+
+- number: '6'
+  author: 'Balodi, Mamta and Banerjee, Abhishek and Kour, Surjeet'
+  fjournal: 'Journal of Pure and Applied Algebra'
+  url: 'https://doi.org/10.1016/j.jpaa.2024.107607'
+  pages: 'Paper No. 107607, 32'
+  year: '2024'
+  title: 'Comodule theories in Grothendieck categories and relative Hopf objects'
+  doi: '10.1016/j.jpaa.2024.107607'
+  issn: '0022-4049,1873-1376'
+  journal: 'J. Pure Appl. Algebra'
+  mrnumber: '4687384'
+  mrclass: '16T05 (16T15 18E10 18E40)'
+  volume: '228'
 
 - number: '2'
   author: 'Chakraborty, Atlanta and Chandru, Vijay and Rao, M. R.'
@@ -4035,21 +4049,6 @@
   mrclass: '45E10 (47G05)'
   volume: '109'
 
-- number: '2-3'
-  author: 'Seshadri, Harish'
-  fjournal: 'Mathematical Research Letters'
-  url: 'http://dx.doi.org/10.4310/MRL.2006.v13.n3.a13'
-  pages: '495-500'
-  year: '2006'
-  mrreviewer: 'Martin Deraux'
-  title: 'Negative sectional curvature and the product complex structure'
-  doi: '10.4310/MRL.2006.v13.n3.a13'
-  issn: '1073-2780'
-  journal: 'Math. Res. Lett.'
-  mrnumber: '2231134'
-  mrclass: '32Q05 (32Q15 53C21)'
-  volume: '13'
-
 - number: '4'
   author: 'Senthil Raani, K. S.'
   fjournal: 'The Journal of Fourier Analysis and Applications'
@@ -4299,6 +4298,34 @@
   mrnumber: '3968867'
   mrclass: '32G15 (30F30 37F75 53C12 57R30)'
   volume: '373'
+
+- author: 'Banerjee, Abhishek and Das, Subhajit'
+  fjournal: 'Journal of Algebra'
+  url: 'https://doi.org/10.1016/j.jalgebra.2023.12.022'
+  pages: '49-75'
+  year: '2024'
+  title: 'Heavily separable functors of the second kind and applications'
+  doi: '10.1016/j.jalgebra.2023.12.022'
+  issn: '0021-8693,1090-266X'
+  journal: 'J. Algebra'
+  mrnumber: '4685883'
+  mrclass: '16D90 (18A40 18C20)'
+  volume: '643'
+
+- number: '2-3'
+  author: 'Seshadri, Harish'
+  fjournal: 'Mathematical Research Letters'
+  url: 'http://dx.doi.org/10.4310/MRL.2006.v13.n3.a13'
+  pages: '495-500'
+  year: '2006'
+  mrreviewer: 'Martin Deraux'
+  title: 'Negative sectional curvature and the product complex structure'
+  doi: '10.4310/MRL.2006.v13.n3.a13'
+  issn: '1073-2780'
+  journal: 'Math. Res. Lett.'
+  mrnumber: '2231134'
+  mrclass: '32Q05 (32Q15 53C21)'
+  volume: '13'
 
 - number: '5'
   author: 'Ghosh, Mrinal K. and Arapostathis, Aristotle and Marcus, Steven I.'
@@ -6128,6 +6155,20 @@
   mrclass: '47A12 (46A32 47A30)'
   volume: '173'
 
+- number: '1'
+  author: 'Bhowmik, Mithun and Ray, Swagato K.'
+  fjournal: 'Annali di Matematica Pura ed Applicata. Series IV'
+  url: 'https://doi.org/10.1007/s10231-023-01365-4'
+  pages: '331-343'
+  year: '2024'
+  title: 'Unique continuation inequalities for Schr&ouml;dinger equation on Riemannian symmetric spaces of noncompact type'
+  doi: '10.1007/s10231-023-01365-4'
+  issn: '0373-3114,1618-1891'
+  journal: 'Ann. Mat. Pura Appl. (4)'
+  mrnumber: '4685731'
+  mrclass: '43A85 (22E30 35B60 35Q41)'
+  volume: '203'
+
 - number: '5'
   author: 'Rao, Ch. Srinivasa and Sachdev, P. L. and Ramaswamy, Mythily'
   fjournal: 'Nonlinear Analysis. Real World Applications. An International Multidisciplinary Journal'
@@ -7030,6 +7071,20 @@
   journal: 'Int. Math. Res. Not. IMRN'
   mrnumber: '4565635'
 
+- number: '1'
+  author: 'Balodi, Mamta and Banerjee, Abhishek and Ray, Samarpita'
+  fjournal: 'Forum Mathematicum'
+  url: 'https://doi.org/10.1515/forum-2023-0043'
+  pages: '111-152'
+  year: '2024'
+  title: 'Categories of modules, comodules and contramodules over representations'
+  doi: '10.1515/forum-2023-0043'
+  issn: '0933-7741,1435-5337'
+  journal: 'Forum Math.'
+  mrnumber: '4685101'
+  mrclass: '16T15 (18E10)'
+  volume: '36'
+
 - number: '4'
   author: 'Bhattacharyya, S. and Pal, A. and Datta, N. and Nath, G.'
   fjournal: 'ZAMM. Zeitschrift f&uuml;r Angewandte Mathematik und Mechanik. Journal of Applied Mathematics and Mechanics'
@@ -7865,20 +7920,6 @@
   mrclass: '47B35 (22E30 32V40 43A85)'
   volume: '2'
 
-- number: '1997'
-  author: 'Wen, Xiaotong and Rangarajan, Govindan and Ding, Mingzhou'
-  fjournal: 'Philosophical Transactions of the Royal Society of London. Series A. Mathematical, Physical and Engineering Sciences'
-  url: 'http://dx.doi.org/10.1098/rsta.2011.0610'
-  pages: '20110610, 14'
-  year: '2013'
-  title: 'Multivariate Granger causality: an estimation framework based on factorization of the spectral density matrix'
-  doi: '10.1098/rsta.2011.0610'
-  issn: '1364-503X'
-  journal: 'Philos. Trans. R. Soc. Lond. Ser. A Math. Phys. Eng. Sci.'
-  mrnumber: '3081177'
-  mrclass: '62M15 (62J15 62M10 92B15)'
-  volume: '371'
-
 - number: '7'
   author: 'Banerjee, Abhishek'
   fjournal: 'International Journal of Mathematics'
@@ -8164,6 +8205,34 @@
   mrnumber: '2361600'
   mrclass: '35L05 (35-02 35C20 76J20 76L05)'
   volume: '38'
+
+- number: '1997'
+  author: 'Wen, Xiaotong and Rangarajan, Govindan and Ding, Mingzhou'
+  fjournal: 'Philosophical Transactions of the Royal Society of London. Series A. Mathematical, Physical and Engineering Sciences'
+  url: 'http://dx.doi.org/10.1098/rsta.2011.0610'
+  pages: '20110610, 14'
+  year: '2013'
+  title: 'Multivariate Granger causality: an estimation framework based on factorization of the spectral density matrix'
+  doi: '10.1098/rsta.2011.0610'
+  issn: '1364-503X'
+  journal: 'Philos. Trans. R. Soc. Lond. Ser. A Math. Phys. Eng. Sci.'
+  mrnumber: '3081177'
+  mrclass: '62M15 (62J15 62M10 92B15)'
+  volume: '371'
+
+- number: '17'
+  author: 'Cameron, Peter J. and Das, Angsuman and Dey, Hiranya Kishore'
+  fjournal: 'Linear and Multilinear Algebra'
+  url: 'https://doi.org/10.1080/03081087.2022.2121370'
+  pages: '2858-2868'
+  year: '2023'
+  title: 'On some properties of vector space based graphs'
+  doi: '10.1080/03081087.2022.2121370'
+  issn: '0308-1087,1563-5139'
+  journal: 'Linear Multilinear Algebra'
+  mrnumber: '4684438'
+  mrclass: '05C25 (05C45 05E18)'
+  volume: '71'
 
 - number: '5'
   author: 'Banerjee, Abhishek and Kour, Surjeet'
@@ -8522,21 +8591,6 @@
   mrclass: '57Q15'
   volume: '112'
 
-- number: '7'
-  author: 'Lord, Eric A.'
-  fjournal: 'International Journal of Theoretical Physics'
-  url: 'http://dx.doi.org/10.1007/BF00670879'
-  pages: '723-730'
-  year: '1985'
-  mrreviewer: 'J. L\~A$\mu$hmus'
-  title: 'Geometrical interpretation of In&ouml;n&uuml;-Wigner contractions'
-  doi: '10.1007/BF00670879'
-  issn: '0020-7748'
-  journal: 'Internat. J. Theoret. Phys.'
-  mrnumber: '798760'
-  mrclass: '22E99 (22E70 81C40)'
-  volume: '24'
-
 - number: '2'
   author: 'Kumar, K. Suresh'
   fjournal: 'Computational \& Applied Mathematics'
@@ -8685,6 +8739,35 @@
   mrnumber: '2035753'
   mrclass: '35Q53 (34A12 35C05 35K57 65L05)'
   volume: '7'
+
+- number: '7'
+  author: 'Lord, Eric A.'
+  fjournal: 'International Journal of Theoretical Physics'
+  url: 'http://dx.doi.org/10.1007/BF00670879'
+  pages: '723-730'
+  year: '1985'
+  mrreviewer: 'J. L\~A$\mu$hmus'
+  title: 'Geometrical interpretation of In&ouml;n&uuml;-Wigner contractions'
+  doi: '10.1007/BF00670879'
+  issn: '0020-7748'
+  journal: 'Internat. J. Theoret. Phys.'
+  mrnumber: '798760'
+  mrclass: '22E99 (22E70 81C40)'
+  volume: '24'
+
+- number: '2'
+  author: 'Demangos, Luca and Longhi, Ignazio'
+  fjournal: 'Mathematische Zeitschrift'
+  url: 'https://doi.org/10.1007/s00209-023-03415-2'
+  pages: 'Paper No. 21, 52'
+  year: '2024'
+  title: 'Densities on Dedekind domains, completions and Haar measure'
+  doi: '10.1007/s00209-023-03415-2'
+  issn: '0025-5874,1432-1823'
+  journal: 'Math. Z.'
+  mrnumber: '4686869'
+  mrclass: '11B05 (11R04 13F05)'
+  volume: '306'
 
 - number: '1'
   author: 'Shaiju, A. J. and Dharmatti, Sheetal'
@@ -10335,20 +10418,6 @@
   mrclass: '05C10 (52B70 57Q15)'
   volume: '136'
 
-- number: '6'
-  author: 'Aiyappan, S. and Nandakumaran, A. K. and Prakash, Ravi'
-  fjournal: 'Annali di Matematica Pura ed Applicata. Series IV'
-  url: 'https://doi.org/10.1007/s10231-019-00848-7'
-  pages: '1931-1954'
-  year: '2019'
-  title: 'Locally periodic unfolding operator for highly oscillating rough domains'
-  doi: '10.1007/s10231-019-00848-7'
-  issn: '0373-3114'
-  journal: 'Ann. Mat. Pura Appl. (4)'
-  mrnumber: '4031833'
-  mrclass: '35B27 (35J25 80M35 80M40)'
-  volume: '198'
-
 - number: '2'
   author: 'Choudhury, Projesh Nath'
   fjournal: 'Bulletin of the London Mathematical Society'
@@ -10638,6 +10707,34 @@
   mrclass: '32L10'
   volume: '167'
 
+- number: '2'
+  author: 'Shakya, Pratibha'
+  fjournal: 'Journal of Mathematical Analysis and Applications'
+  url: 'https://doi.org/10.1016/j.jmaa.2024.128109'
+  pages: 'Paper No. 128109, 29'
+  year: '2024'
+  title: 'Error analysis for the finite element approximations of Dirichlet parabolic boundary control problem with measure data'
+  doi: '10.1016/j.jmaa.2024.128109'
+  issn: '0022-247X,1096-0813'
+  journal: 'J. Math. Anal. Appl.'
+  mrnumber: '4694345'
+  mrclass: '65M12 (35K20 49J20 49M41 65M60)'
+  volume: '534'
+
+- number: '6'
+  author: 'Aiyappan, S. and Nandakumaran, A. K. and Prakash, Ravi'
+  fjournal: 'Annali di Matematica Pura ed Applicata. Series IV'
+  url: 'https://doi.org/10.1007/s10231-019-00848-7'
+  pages: '1931-1954'
+  year: '2019'
+  title: 'Locally periodic unfolding operator for highly oscillating rough domains'
+  doi: '10.1007/s10231-019-00848-7'
+  issn: '0373-3114'
+  journal: 'Ann. Mat. Pura Appl. (4)'
+  mrnumber: '4031833'
+  mrclass: '35B27 (35J25 80M35 80M40)'
+  volume: '198'
+
 - number: '22'
   author: 'Bagchi, Bhaskar and Datta, Basudeb'
   fjournal: 'Discrete Mathematics'
@@ -10853,6 +10950,20 @@
   mrnumber: '3471985'
   mrclass: '18D10 (13N15)'
   volume: '23'
+
+- number: '6'
+  author: 'Banerjee, Abhishek'
+  fjournal: 'Algebras and Representation Theory'
+  url: 'https://doi.org/10.1007/s10468-023-10203-3'
+  pages: '3185-3221'
+  year: '2023'
+  title: 'Entwined modules over representations of categories'
+  doi: '10.1007/s10468-023-10203-3'
+  issn: '1386-923X,1572-9079'
+  journal: 'Algebr. Represent. Theory'
+  mrnumber: '4681348'
+  mrclass: '18E05 (16T15 18E10)'
+  volume: '26'
 
 - number: '10'
   author: 'Balodi, Mamta and Huang, Hua-Lin and Kumar, Shiv Datt'
@@ -18718,22 +18829,6 @@
   publisher: 'World Scientific Publishing Co. Pte. Ltd., Hackensack, NJ'
   isbn: '978-981-270-466-5; 981-270-466-3'
 
-- number: '1-3'
-  author: 'Thatte, B. D.'
-  fjournal: 'Discrete Mathematics'
-  url: 'http://dx.doi.org/10.1016/0012-365X(92)00061-U'
-  pages: '193-216'
-  year: '1994'
-  note: 'Graphs and combinatorics (Qawra, 1990)'
-  mrreviewer: 'L\~A!`szl\~A${}^3$ Pyber'
-  title: 'Some results and approaches for reconstruction conjectures'
-  doi: '10.1016/0012-365X(92)00061-U'
-  issn: '0012-365X'
-  journal: 'Discrete Math.'
-  mrnumber: '1258854'
-  mrclass: '05C60'
-  volume: '124'
-
 - number: '2'
   author: 'Ramaswamy, Mythily and Dharmatti, Sheetal'
   fjournal: 'Journal of Mathematical Analysis and Applications'
@@ -19251,6 +19346,36 @@
   mrnumber: '4591851'
   mrclass: '43A80 (22E25 43A85)'
   volume: '149'
+
+- number: '1-3'
+  author: 'Thatte, B. D.'
+  fjournal: 'Discrete Mathematics'
+  url: 'http://dx.doi.org/10.1016/0012-365X(92)00061-U'
+  pages: '193-216'
+  year: '1994'
+  note: 'Graphs and combinatorics (Qawra, 1990)'
+  mrreviewer: 'L\~A!`szl\~A${}^3$ Pyber'
+  title: 'Some results and approaches for reconstruction conjectures'
+  doi: '10.1016/0012-365X(92)00061-U'
+  issn: '0012-365X'
+  journal: 'Discrete Math.'
+  mrnumber: '1258854'
+  mrclass: '05C60'
+  volume: '124'
+
+- number: '6'
+  author: 'Mishra, Ashish and Paul, Digjoy and Singla, Pooja'
+  fjournal: 'Algebras and Representation Theory'
+  url: 'https://doi.org/10.1007/s10468-023-10201-5'
+  pages: '3101-3118'
+  year: '2023'
+  title: 'On quasi Steinberg characters of complex reflection groups'
+  doi: '10.1007/s10468-023-10201-5'
+  issn: '1386-923X,1572-9079'
+  journal: 'Algebr. Represent. Theory'
+  mrnumber: '4681344'
+  mrclass: '20C15 (05E16 20F55)'
+  volume: '26'
 
 - author: 'Misra, Gadadhar and Upmeier, Harald'
   fjournal: 'Advances in Mathematics'
