--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -200,3 +200,13 @@
   image: true 
   research-area: Lie algebras 
   office: L18
+  
+- name: Golam Mostafa Mondal    
+  webpage: https://sites.google.com/view/golam-mostafa
+  phd: IISER Kolkata
+  user-id: golammondal@iisc.ac.in
+  position: IoE-Postdoctoral Fellow
+  image: true 
+  research-area: Several Complex Variables
+  office: R24
+  
