--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -204,7 +204,7 @@
 - name: Golam Mostafa Mondal    
   webpage: https://sites.google.com/view/golam-mostafa
   phd: IISER Kolkata
-  user-id: golammondal@iisc.ac.in
+  user-id: golammondal
   position: IoE-Postdoctoral Fellow
   image: true 
   research-area: Several Complex Variables
