--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -2672,6 +2672,19 @@
   mrclass: '93E20 (49J55 49L25 60J10)'
   volume: '61'
 
+- author: 'Das, Sumanta and Gadgil, Siddhartha'
+  fjournal: 'Comptes Rendus Math&eacute;matique. Acad&eacute;mie des Sciences. Paris'
+  url: 'https://doi.org/10.5802/crmath.504'
+  pages: '1349-1356'
+  year: '2023'
+  title: 'Surfaces of infinite-type are non-Hopfian'
+  doi: '10.5802/crmath.504'
+  issn: '1631-073X,1778-3569'
+  journal: 'C. R. Math. Acad. Sci. Paris'
+  mrnumber: '4683314'
+  mrclass: '57K20 (55S37)'
+  volume: '361'
+
 - number: '2'
   author: 'George, R. K. and Nandakumaran, A. K. and Arapostathis, A.'
   fjournal: 'Journal of Mathematical Analysis and Applications'
@@ -4547,6 +4560,20 @@
   mrclass: '49J27 (49K27 49L25)'
   volume: '11'
 
+- number: '1'
+  author: 'Mazur, Barry and Lichtenbaum, Stephen and Wiles, Andrew and Schneps, Leila and Sujatha and Kakde, Mahesh'
+  fjournal: 'Notices of the American Mathematical Society'
+  url: 'https://doi.org/10.1090/noti2844'
+  pages: '46-56'
+  year: '2024'
+  title: 'John Coates (1945-2022): celebration of a life'
+  doi: '10.1090/noti2844'
+  issn: '0002-9920,1088-9477'
+  journal: 'Notices Amer. Math. Soc.'
+  mrnumber: '4693600'
+  mrclass: '01A70 (11-03)'
+  volume: '71'
+
 - number: '3'
   author: 'Shaiju, A. J.'
   fjournal: 'Computational \& Applied Mathematics'
@@ -6045,6 +6072,16 @@
   mrclass: '70H40 (58F05 83A05)'
   volume: '25'
 
+- author: 'Dasgupta, Samit and Kakde, Mahesh'
+  mrnumber: '4680300'
+  pages: '1768-1799'
+  year: '[2023] \copyright 2023'
+  booktitle: 'ICM--International Congress of Mathematicians. Vol. III. Sections 1-4'
+  title: 'On the Brumer-Stark conjecture and refinements'
+  mrclass: '11R37 (11R42)'
+  publisher: 'EMS Press, Berlin'
+  isbn: '978-3-98547-061-7; 978-3-98547-561-2; 978-3-98547-058-7'
+
 - number: '1'
   author: 'Ray, Samarpita'
   fjournal: 'Journal of Algebra and its Applications'
@@ -7277,6 +7314,20 @@
   journal: 'Int. Math. Res. Not. IMRN'
   mrnumber: '3180597'
 
+- number: '6'
+  author: 'Alpay, Daniel and Bhattacharyya, Tirthankar and Jindal, Abhay and Kumar, Poornendu'
+  fjournal: 'Bulletin of the London Mathematical Society'
+  url: 'https://doi.org/10.1112/blms.12897'
+  pages: '2840-2855'
+  year: '2023'
+  title: 'A dilation theoretic approach to approximation by inner functions'
+  doi: '10.1112/blms.12897'
+  issn: '0024-6093,1469-2120'
+  journal: 'Bull. Lond. Math. Soc.'
+  mrnumber: '4689556'
+  mrclass: '47A20 (30H50 32A37 47A56 93B28)'
+  volume: '55'
+
 - number: '2'
   author: 'Balodi, Mamta and Banerjee, Abhishek and Ray, Samarpita'
   fjournal: 'Israel Journal of Mathematics'
@@ -7810,20 +7861,6 @@
   mrclass: '94B10 (05C90 15A57)'
   volume: '50'
 
-- number: '4'
-  author: 'Krishnamurthy, E. V.'
-  fjournal: 'Institute of Electrical and Electronics Engineers. Transactions on Computers'
-  url: 'http://dx.doi.org/10.1109/TC.1983.1676233'
-  pages: '331-337'
-  year: '1983'
-  title: 'On the conversion of Hensel codes to Farey rationals'
-  doi: '10.1109/TC.1983.1676233'
-  issn: '0018-9340'
-  journal: 'IEEE Trans. Comput.'
-  mrnumber: '722716'
-  mrclass: '11A63 (11Y16 68Q25)'
-  volume: '32'
-
 - number: '3'
   author: 'Kanoria, Mridula and Mandal, B. N. and Chakrabarti, A.'
   fjournal: 'Wave Motion. An International Journal Reporting Research on Wave Phenomena'
@@ -7850,6 +7887,34 @@
   mrnumber: '4664337'
   mrclass: '22E50 (11S37)'
   volume: '27'
+
+- number: '4'
+  author: 'Krishnamurthy, E. V.'
+  fjournal: 'Institute of Electrical and Electronics Engineers. Transactions on Computers'
+  url: 'http://dx.doi.org/10.1109/TC.1983.1676233'
+  pages: '331-337'
+  year: '1983'
+  title: 'On the conversion of Hensel codes to Farey rationals'
+  doi: '10.1109/TC.1983.1676233'
+  issn: '0018-9340'
+  journal: 'IEEE Trans. Comput.'
+  mrnumber: '722716'
+  mrclass: '11A63 (11Y16 68Q25)'
+  volume: '32'
+
+- number: '4'
+  author: 'Gehlawat, Sahil and Verma, Kaushal'
+  fjournal: 'Journal of Geometric Analysis'
+  url: 'https://doi.org/10.1007/s12220-024-01547-3'
+  pages: 'Paper No. 97, 18'
+  year: '2024'
+  title: 'Regularity of the leafwise Poincar&eacute; metric on singular holomorphic foliations'
+  doi: '10.1007/s12220-024-01547-3'
+  issn: '1050-6926,1559-002X'
+  journal: 'J. Geom. Anal.'
+  mrnumber: '4704736'
+  mrclass: '32M25 (30F45 32S65 37F75)'
+  volume: '34'
 
 - number: '6'
   author: 'Narayanan, E. K. and Singla, Pooja'
@@ -9108,6 +9173,20 @@
   mrnumber: '4662819'
   mrclass: '55P50 (05B45 16E40)'
   volume: '54'
+
+- number: '1'
+  author: 'Ghosh, Mrinal K. and Golui, Subrata and Pal, Chandan and Pradhan, Somnath'
+  fjournal: 'Mathematical Control and Related Fields'
+  url: 'https://doi.org/10.3934/mcrf.2023003'
+  pages: '255-283'
+  year: '2024'
+  title: 'Zero-sum stochastic games in continuous-time with risk-sensitive average cost criterion on a countable state space'
+  doi: '10.3934/mcrf.2023003'
+  issn: '2156-8472,2156-8499'
+  journal: 'Math. Control Relat. Fields'
+  mrnumber: '4696181'
+  mrclass: '91A15 (60J27 91A25)'
+  volume: '14'
 
 - number: '3'
   author: 'Bahuguna, D. and Muslim, M.'
@@ -15595,6 +15674,19 @@
   mrclass: '90C40 (93E20)'
   volume: '66'
 
+- author: 'Bhattacharyya, Tirthankar and Rastogi, Shubham and Vijaya Kumar, U.'
+  url: 'https://doi.org/10.1007/978-3-031-50535-5_7'
+  mrnumber: '4697461'
+  pages: '155-193'
+  year: '[2023] \copyright 2023'
+  note: 'Reprint of [4454395]'
+  booktitle: 'Multivariable operator theory--the J&ouml;rg Eschmeier memorial volume'
+  title: 'The joint spectrum for a commuting pair of isometries in certain cases'
+  doi: '10.1007/978-3-031-50535-5\_7'
+  mrclass: '47A13 (47A45 47A56)'
+  publisher: 'Birkh&auml;user/Springer, Cham'
+  isbn: '978-3-031-50534-8'
+
 - number: '3'
   author: 'Singh, Nitin'
   fjournal: 'Advances in Geometry'
@@ -16015,16 +16107,6 @@
   mrclass: '16U20 (16S36 17A36)'
   volume: '15'
 
-- mrnumber: '2840854'
-  pages: 'x+803'
-  year: '2010'
-  editor: 'Bhatia, Rajendra and Pal, Arup and Rangarajan, G. and Srinivas, V. and Vanninathan, M.'
-  note: 'Plenary lectures and ceremonies, Held in Hyderabad, August 19-27, 2010'
-  title: 'Proceedings of the International Congress of Mathematicians. Volume I'
-  mrclass: '00B20'
-  publisher: 'Hindustan Book Agency, New Delhi; distributed by World Scientific Publishing Co. Pte. Ltd., Singapore'
-  isbn: '978-81-85931-08-3; 978-981-4324-31-1; 981-4324-31-0'
-
 - number: '3'
   author: 'Sinha, S. K. and Shrivastava, S. K.'
   fjournal: 'Journal of Guidance, Control, and Dynamics'
@@ -16218,6 +16300,29 @@
   mrnumber: '3320530'
   mrclass: '65N30 (65N22 65N55)'
   volume: '5'
+
+- mrnumber: '2840854'
+  pages: 'x+803'
+  year: '2010'
+  editor: 'Bhatia, Rajendra and Pal, Arup and Rangarajan, G. and Srinivas, V. and Vanninathan, M.'
+  note: 'Plenary lectures and ceremonies, Held in Hyderabad, August 19-27, 2010'
+  title: 'Proceedings of the International Congress of Mathematicians. Volume I'
+  mrclass: '00B20'
+  publisher: 'Hindustan Book Agency, New Delhi; distributed by World Scientific Publishing Co. Pte. Ltd., Singapore'
+  isbn: '978-81-85931-08-3; 978-981-4324-31-1; 981-4324-31-0'
+
+- author: 'Krishnapur, Manjunath and Lundberg, Erik and Ramachandran, Koushik'
+  fjournal: 'Journal of Approximation Theory'
+  url: 'https://doi.org/10.1016/j.jat.2024.106018'
+  pages: 'Paper No. 106018, 25'
+  year: '2024'
+  title: 'Inradius of random lemniscates'
+  doi: '10.1016/j.jat.2024.106018'
+  issn: '0021-9045,1096-0430'
+  journal: 'J. Approx. Theory'
+  mrnumber: '4703355'
+  mrclass: '30C10 (31A15 60G60)'
+  volume: '299'
 
 - number: '4'
   author: 'Chakrabarti, A. and Sahoo, T.'
@@ -20155,6 +20260,20 @@
   mrnumber: '2914325'
   mrclass: '76W05 (65M08 76N15)'
   volume: '34'
+
+- number: '1'
+  author: 'Ayyer, Arvind and Sinha, Shubham'
+  fjournal: 'Electronic Journal of Combinatorics'
+  url: 'https://doi.org/10.37236/12022'
+  pages: 'Paper No. 1.47, 14'
+  year: '2024'
+  title: 'Cores of partitions in rectangles'
+  doi: '10.37236/12022'
+  issn: '1077-8926'
+  journal: 'Electron. J. Combin.'
+  mrnumber: '4707768'
+  mrclass: '05A17 (05A15 05A16 60C05)'
+  volume: '31'
 
 - number: '5'
   author: 'Lazarev, M. P. and Prasad, Phoolan and Sing, S. K.'
