--- a/_data/publ.yaml
+++ b/_data/publ.yaml
@@ -618,17 +618,6 @@
   mrclass: '32A60 (32C99 32Q35 46E22 47B32 53C07)'
   volume: '169'
 
-- mrnumber: '4321169'
-  pages: '63--87'
-  year: '2020'
-  publisher: 'Eur. Math. Soc., Z\"urich'
-  booktitle: 'Handbook of Teichm\"uller theory. Vol. VII'
-  title: 'Complex geometry of Teichm\"uller domains'
-  author: 'Gupta, Subhojoy and Seshadri, Harish'
-  series: 'IRMA Lect. Math. Theor. Phys.'
-  mrclass: '30F60 (30C62 30F35 32G15)'
-  volume: '30'
-
 - mrnumber: '1795202'
   pages: '605--615'
   year: '2000'
@@ -881,6 +870,31 @@
   mrnumber: '1760083'
   mrclass: '03B44'
   volume: '10'
+
+- number: '1'
+  author: 'Bhunia, Pintu and Ipek Al, Pembe and Ismailov, Zameddin I.'
+  fjournal: 'Indian Academy of Sciences. Proceedings. Mathematical Sciences'
+  url: 'https://doi.org/10.1007/s12044-023-00770-2'
+  pages: 'Paper No. 4, 15'
+  year: '2024'
+  title: 'On the convergence of some spectral characteristics of the converging operator sequences'
+  doi: '10.1007/s12044-023-00770-2'
+  issn: '0253-4142,0973-7685'
+  journal: 'Proc. Indian Acad. Sci. Math. Sci.'
+  mrnumber: '4707363'
+  mrclass: '47A12 (47A05 47A10 47A30)'
+  volume: '134'
+
+- mrnumber: '4321169'
+  pages: '63--87'
+  year: '2020'
+  publisher: 'Eur. Math. Soc., Z\"urich'
+  booktitle: 'Handbook of Teichm\"uller theory. Vol. VII'
+  title: 'Complex geometry of Teichm\"uller domains'
+  author: 'Gupta, Subhojoy and Seshadri, Harish'
+  series: 'IRMA Lect. Math. Theor. Phys.'
+  mrclass: '30F60 (30C62 30F35 32G15)'
+  volume: '30'
 
 - number: '2'
   author: 'Majumdar, Anita and Yau, Donald'
@@ -2741,6 +2755,19 @@
   mrclass: '11F70 (22E50)'
   volume: '257'
 
+- author: 'Kumari, Nishu'
+  fjournal: 'Journal of Combinatorial Theory. Series A'
+  url: 'https://doi.org/10.1016/j.jcta.2024.105883'
+  pages: 'Paper No. 105883, 13'
+  year: '2024'
+  title: 'A short combinatorial proof of dimension identities of Erickson and Hunziker'
+  doi: '10.1016/j.jcta.2024.105883'
+  issn: '0097-3165,1096-0899'
+  journal: 'J. Combin. Theory Ser. A'
+  mrnumber: '4711904'
+  mrclass: '05A17 (05A19)'
+  volume: '205'
+
 - author: 'Pingali, Vamsi Pritham'
   fjournal: 'Advances in Mathematics'
   url: 'https://doi.org/10.1016/j.aim.2019.106921'
@@ -3399,20 +3426,6 @@
   mrclass: '93E20 (49L20 60J27 90C39)'
   volume: '33'
 
-- author: 'Ayyer, Arvind and Bouttier, J\''er\''emie and Corteel, Sylvie and Linusson, Svante and Nunzi, Fran\ccois'
-  fjournal: 'Advances in Applied Mathematics'
-  url: 'https://doi.org/10.1016/j.aam.2018.03.001'
-  pages: '100--126'
-  year: '2018'
-  mrreviewer: 'Leonid V. Bogachev'
-  title: 'Bumping sequences and multispecies juggling'
-  doi: '10.1016/j.aam.2018.03.001'
-  issn: '0196-8858'
-  journal: 'Adv. in Appl. Math.'
-  mrnumber: '3790010'
-  mrclass: '60C05 (05A05 60J10 82C23)'
-  volume: '98'
-
 - number: '4'
   author: 'Basak, Biplab and Casali, Maria Rita'
   fjournal: 'Forum Mathematicum'
@@ -3605,6 +3618,34 @@
   mrnumber: '3361565'
   mrclass: '42C10 (26A33 33C52 47G40)'
   volume: '22'
+
+- author: 'Ayyer, Arvind and Bouttier, J\''er\''emie and Corteel, Sylvie and Linusson, Svante and Nunzi, Fran\ccois'
+  fjournal: 'Advances in Applied Mathematics'
+  url: 'https://doi.org/10.1016/j.aam.2018.03.001'
+  pages: '100--126'
+  year: '2018'
+  mrreviewer: 'Leonid V. Bogachev'
+  title: 'Bumping sequences and multispecies juggling'
+  doi: '10.1016/j.aam.2018.03.001'
+  issn: '0196-8858'
+  journal: 'Adv. in Appl. Math.'
+  mrnumber: '3790010'
+  mrclass: '60C05 (05A05 60J10 82C23)'
+  volume: '98'
+
+- number: '3-4'
+  author: 'Bhamidi, Shankar and Sen, Sanchayan'
+  fjournal: 'Probability Theory and Related Fields'
+  url: 'https://doi.org/10.1007/s00440-024-01259-3'
+  pages: '729--804'
+  year: '2024'
+  title: 'Geometry of the minimal spanning tree in the heavy-tailed regime: new universality classes'
+  doi: '10.1007/s00440-024-01259-3'
+  issn: '0178-8051,1432-2064'
+  journal: 'Probab. Theory Related Fields'
+  mrnumber: '4716340'
+  mrclass: '60C05 (05C80)'
+  volume: '188'
 
 - url: 'https://doi.org/10.1007/978-1-4939-0938-4_13'
   mrnumber: '3308326'
@@ -4195,6 +4236,20 @@
   booktitle: 'Elliptic curves, modular forms and cryptography (Allahabad, 2000)'
   title: '$L$-functions of modular forms'
   mrclass: '11F66'
+
+- number: '3'
+  author: 'Bhunia, Pintu and Sen, Anirban and Paul, Kallol'
+  fjournal: 'Rendiconti del Circolo Matematico di Palermo. Second Series'
+  url: 'https://doi.org/10.1007/s12215-023-00958-5'
+  pages: '887--897'
+  year: '2024'
+  title: 'Generalized Cartesian decomposition and numerical radius inequalities'
+  doi: '10.1007/s12215-023-00958-5'
+  issn: '0009-725X,1973-4409'
+  journal: 'Rend. Circ. Mat. Palermo (2)'
+  mrnumber: '4722460'
+  mrclass: '47A12 (15A60 47A30)'
+  volume: '73'
 
 - number: '1'
   author: 'Singh, Nitin'
@@ -7247,6 +7302,20 @@
   mrclass: '46B20 (47L05)'
   volume: '13'
 
+- number: '1'
+  author: 'Monsurr\`o, S. and Nandakumaran, A. K. and Perugia, C.'
+  fjournal: 'Ricerche di Matematica. A Journal of Pure and Applied Mathematics'
+  url: 'https://doi.org/10.1007/s11587-021-00625-w'
+  pages: '547--564'
+  year: '2024'
+  title: 'A note on the exact boundary controllability for an imperfect transmission problem'
+  doi: '10.1007/s11587-021-00625-w'
+  issn: '0035-5038,1827-3491'
+  journal: 'Ric. Mat.'
+  mrnumber: '4715437'
+  mrclass: '93B05 (35B27 35L20 35Q93 93C20)'
+  volume: '73'
+
 - number: '3'
   author: 'Borkar, V. S. and Ghosh, M. K. and Sahay, P.'
   fjournal: 'Journal of Optimization Theory and Applications'
@@ -10052,6 +10121,19 @@
   mrnumber: '3651974'
   mrclass: '49J45 (35B27 35K20)'
   volume: '40'
+
+- author: 'Banerjee, Abhishek and Kour, Surjeet'
+  fjournal: 'Advances in Mathematics'
+  url: 'https://doi.org/10.1016/j.aim.2024.109581'
+  pages: 'Paper No. 109581, 48'
+  year: '2024'
+  title: 'Measurings of Hopf algebroids and morphisms in cyclic (co)homology theories'
+  doi: '10.1016/j.aim.2024.109581'
+  issn: '0001-8708,1090-2082'
+  journal: 'Adv. Math.'
+  mrnumber: '4710875'
+  mrclass: '16T15 (16E40 18M65)'
+  volume: '442'
 
 - number: '4'
   author: 'Bhatia, Manan'
@@ -13840,18 +13922,6 @@
   mrclass: '47G10 (47A10 47A75)'
   volume: '18'
 
-- author: 'Ayyer, Arvind and Josuat-Verg\`es, Matthieu and Ramassamy, Sanjay'
-  fjournal: 'Annales Henri Lebesgue'
-  url: 'https://doi.org/10.5802/ahl.33'
-  pages: '275--297'
-  year: '2020'
-  title: 'Extensions of partial cyclic orders and consecutive coordinate polytopes'
-  doi: '10.5802/ahl.33'
-  journal: 'Ann. H. Lebesgue'
-  mrnumber: '4113648'
-  mrclass: '52B05 (05A05 05A10 06A75 52B11)'
-  volume: '3'
-
 - author: 'Pal, Ratna and Verma, Kaushal'
   fjournal: 'Conformal Geometry and Dynamics. An Electronic Journal of the American Mathematical Society'
   url: 'https://doi.org/10.1090/ecgd/285'
@@ -14072,6 +14142,46 @@
   publisher: 'Amer. Math. Soc., Providence, RI'
   mrclass: '32A50 (35L05 43A85 44A15)'
   volume: '382'
+
+- number: '2'
+  author: 'Nandakumaran, A. K. and Sufian, Abu and Thazhathethil, Renjith'
+  fjournal: 'Applied Mathematics and Optimization'
+  url: 'https://doi.org/10.1007/s00245-024-10113-w'
+  pages: 'Paper No. 46, 42'
+  year: '2024'
+  title: 'Homogenization of semi-linear optimal control problems on oscillating domains with matrix coefficients'
+  doi: '10.1007/s00245-024-10113-w'
+  issn: '0095-4616,1432-0606'
+  journal: 'Appl. Math. Optim.'
+  mrnumber: '4713801'
+  mrclass: '49J20 (35B27 35J25 49J45)'
+  volume: '89'
+
+- number: '2'
+  author: 'Hatui, Sumana and Narayanan, E. K. and Singla, Pooja'
+  fjournal: 'Journal of Group Theory'
+  url: 'https://doi.org/10.1515/jgth-2022-0033'
+  pages: '413--442'
+  year: '2024'
+  title: 'Projective representations of Heisenberg groups over the rings of order $p^2$'
+  doi: '10.1515/jgth-2022-0033'
+  issn: '1433-5883,1435-4446'
+  journal: 'J. Group Theory'
+  mrnumber: '4710860'
+  mrclass: '20C25 (20F18 20G05)'
+  volume: '27'
+
+- author: 'Ayyer, Arvind and Josuat-Verg\`es, Matthieu and Ramassamy, Sanjay'
+  fjournal: 'Annales Henri Lebesgue'
+  url: 'https://doi.org/10.5802/ahl.33'
+  pages: '275--297'
+  year: '2020'
+  title: 'Extensions of partial cyclic orders and consecutive coordinate polytopes'
+  doi: '10.5802/ahl.33'
+  journal: 'Ann. H. Lebesgue'
+  mrnumber: '4113648'
+  mrclass: '52B05 (05A05 05A10 06A75 52B11)'
+  volume: '3'
 
 - number: '5'
   author: 'Bhunia, Pintu and Jana, Suvendu and Paul, Kallol'
@@ -18817,6 +18927,20 @@
   mrnumber: '2196935'
   mrclass: '52B70 (51M20 57M20)'
   volume: '46'
+
+- number: '1'
+  author: 'Guesba, Messaoud and Bhunia, Pintu and Paul, Kallol'
+  fjournal: 'Journal of Convex Analysis'
+  url: 'https://doi.org/10.7153/oam-2024-18-06'
+  pages: '227--242'
+  year: '2024'
+  title: '$A$-numerical radius of semi-Hilbert space operators'
+  doi: '10.7153/oam-2024-18-06'
+  issn: '0944-6532,2363-6394'
+  journal: 'J. Convex Anal.'
+  mrnumber: '4710653'
+  mrclass: '47A12 (47A05 47A30 47B15)'
+  volume: '31'
 
 - number: '1'
   author: 'Venkatesh, Rajendran and Viswanath, Sankaran'
