--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -21518,3 +21518,31 @@
   year: 2018
   volume: 97
   pages: 012151
+
+
+- author: S. Monisha and N. Vishnu Priya and M. Senthilvelan
+  title: Degenerate soliton solutions and their interactions in coupled Hirota equation with trivial and nontrivial background
+  journal: Nonlinear Dynamics
+  volume: 111
+  year: 2023
+  url: https://link.springer.com/article/10.1007/s11071-023-08976-9
+  doi: 10.1007/s11071-023-08976-9
+  pages: 21877-21894
+
+- author: S. Monisha and N. Vishnu Priya and M. Senthilvelan and Govindan Rangarajan 
+  title: Nth-order smooth positon and breather-positon solutions of a generalized nonlinear Schrödinger equation
+  journal: The European Physical Journal Plus 
+  volume: 137
+  year: 2022
+  article: 646
+  url: https://link.springer.com/article/10.1140/epjp/s13360-022-02861-x
+  doi: 10.1140/epjp/s13360-022-02861-x
+
+- author: M. Pradeepa and N. Vishnu Priya and M Senthilvelan
+  title: Penrose instabilities and the emergence of rogue waves in Sasa–Satsuma equation
+  journal: The European Physical Journal Plus
+  volume: 136
+  year: 2021
+  article: 591
+  url: https://link.springer.com/article/10.1140/epjp/s13360-021-01570-1
+  doi: 10.1140/epjp/s13360-021-01570-1
